<resources>
    <string name="app_name">GSST</string>
    <string name="default_ip">192.168.123.207</string>
    <string name="basUrl">http://192.168.123.207:8080/transportservice/type/jason/action/</string>

    <string name="json_first">serverinfo</string>
    <string name="query">查询</string>
    <string name="charge">充值</string>
    <string name="cancel">取消</string>
    <string name="login">用户登录</string>
    <string name="reginster">用户注册</string>
    <string name="intersection">路口</string>
    <string name="sorting">排序:</string>
    <string name="fur_query">批量设置</string>
    <string name="red_time">红灯时长(s)</string>
    <string name="green_time">绿灯时长(s)</string>
    <string name="yellow_time">黄灯时长(s)</string>
    <string name="operating">操作项</string>
    <string name="setting">设置</string>
    <string name="traffic_light">红绿灯管理</string>
    <string name="traffic_set">红绿灯设置</string>
    <string name="red_cycle">红灯周期:</string>
    <string name="green_cycle">绿灯周期:</string>
    <string name="yellow_cycle">黄灯周期:</string>
    <string name="second">秒</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="reok">注册</string>
    <string name="road_query">路况查询</string>
    <string name="road_day">%1$s \n %2$s </string>
    <string name="road_envir_number">%1$d ℃\n\n%2$d %%\n\n%3$d μg/m³</string>
    <string name="road_envir_text">温度：\n\n相对湿度：\n\nPM2.5：</string>
    <string name="road_color">道路拥挤程度示意：</string>
    <string name="road_1">畅通</string>
    <string name="road_2">缓行</string>
    <string name="road_3">一般拥堵</string>
    <string name="road_4">中度拥堵</string>
    <string name="road_5">严重拥堵</string>
    <string name="threshold_alert">当前1-4号小车账户余额告警阈值为%1$d元</string>
    <string name="road_tv_1">学\n\n院\n\n路</string>
    <string name="road_tv_2">联\n\n想\n\n路</string>
    <string name="road_tv_3">医\n\n院\n\n路</string>
    <string name="road_tv_4">幸\n\n福\n\n路</string>
    <string name="road_tv_5_h">\n\n\n环\n\n城\n\n快\n\n速\n\n路\n\n\n\n\n\n环\n\n城\n\n快\n\n速\n\n路</string>
    <string name="road_tv_6">\n\n\n环\n\n城\n\n高\n\n速\n\n\n\n\n\n环\n\n城\n\n高\n\n速</string>
    <string name="road_tv_7">停车场</string>
    <string name="viol_null">没有查询到%s车的违规信息</string>
    <string name="viol_not">未处理违章   %1$d 次</string>
    <string name="viol_money">罚款 :   %d  元</string>
    <string name="viol_minute">扣分 :   %d  分</string>
    <string name="viol_moneyAll">罚款   %d   元</string>
    <string name="viol_minuteAll">扣   %d   分</string>
    <string name="bills_recharge_all">批量充值</string>
    <string name="bills_recharge_history">充值记录</string>
    <string name="bills_recharge_dialog_title">车辆账户充值</string>
    <string name="bills_recharge_dialog_carnum">车牌号：</string>
    <string name="bills_recharge_dialog_money">充值金额：</string>

    <string name="person_info_operator">姓名：%1$s \n 性别：%2$s 手机号码：%3$s</string>
    <string name="person_threshold_balance">当前1-4号小车账户余额告警值为 %1$d 元</string>
    <string name="person_threshold_balance_empty">当前 1-4 号小车账户余额告警阈值未设置!</string>
    <string name="person_threshold_setting">设置1-4号小车账户余额告警阈值：</string>
    <string name="person_history_sum">总支出 %1$s </string>
    <string name="person_history_name">张三</string>
    <string name="item_person_left_time">%1$s \n %2$s</string>
    <string name="item_person_operator_carnum">充值人：%1$s \n 车牌号：%2$s</string>
    <string name="item_person_recharge_balance">充值：%1$d \n 余额：%2$d</string>
    <string name="item_person_recharge_time">充值时间 \n %1$s</string>
    <string name="tablayout_item1">个人信息</string>
    <string name="tablayout_item2">充值记录</string>
    <string name="tablayout_item3">阈值设置</string>
</resources>
